...
    PRICED: 'Priced',
    HELD: 'Held',
    AWAITING_PAYMENT: 'Awaiting payment',
    PARTIALLY_PAID: 'Partly paid',
    PAID: 'Paid',
    TICKETING: 'Ticketing',
    CONFIRMED: 'Confirmed',
    FAILED: 'Failed',
    CANCELLED: 'Cancelled',
    REFUND_PENDING: 'Refund pending',
    REFUNDED: 'Refunded',
    EXPIRED: 'Expired',
  },
...
